 . TMXMaps: groupNamed renamed to objectGroupNamed (issue #XXX)
 . TouchDispatcher: StandardTouchHandler returns void (not BOOL) and they are executed before the TargetedHandlers (issue #710)
 . XCode: doxygen scripts runs with spaces in subdirectories (issue #684)

version 0.9.0-beta2 - 11-Jan-2010
 . Actions: added 2 new instant actions: FlipX and FlipY (counter-rollback of part issue #620)
 . Actions: uses FLT_EPSILON constant (issue #701)
 . Actions: prevent jerk in Repeat and RepeatForEver (issue #390)
 . Actions: RotateTo can be repeated without losing information (issue #705)
 . BitmapFontAtlas: doesn't override color when using setString (issue #610)
 . Chipmunk: removed compiler warning on chipmunk demo (issue #680)
 . CocosLive: added sanity checks on demo (issue #681)
 . Director: removed compile warning on DisplayLink director (issue #682)
 . Particles: prevent possible memory corruption when autoRemove is ON (issue #703)
 . Scheduler: Supports repeat-number-of-times in scheduled selectors (issue #630)
 . Sprite: anchor + offset + scale works  (issue #671)
 . Sprite: can create subclasses with an SpriteFrameName (issue #XXX)
 . Sprite: flip works as scale * -1 (issue #690)
 . Sprite: easier to subclass. [self init] is called (issue #485)
 . Sprite: isFrameDisplayed works OK with offsets (issue #707)
 . SpriteFrame: removed support for flipX and flipY  (rollback of a part issue #620)
 . SpriteFrameCache: If originalSize is not present, display warning (issue #670)
 . SpriteSheet: adding grand-children doesn't crash (issue #676)
 . SpriteSheet: child and children work OK with negative scales (issue #677)
 . SpriteSheet: It is easier to subclass (issue #397)
 . Templates: uses rfc1034identifier (issue #685)
 . Texture2D: simulator treats pre-multiplied alpha images correctly (issue #697)
 . TextureCache: doesn't crash when file not found. log error insted (issue #695)
 . TMXTiledMap: added support for object and objectgroup (issue #636)