@@ -25,6 +25,7 @@ typedef struct _hashElement
 	CCAction			*currentAction;
 	BOOL			currentActionSalvaged;
 	BOOL			paused;	
+	float			timeScale;
 } tHashElement;
 
 
@@ -92,6 +93,10 @@ typedef struct _hashElement
  Once the actions are resumed, they will be "ticked" in every frame.
  */
 -(void) resumeAllActionsForTarget:(id)target;
+
+/** Scales the time for all actions
+ */
+-(void) timeScaleAllActionsForTarget:(id) target scale:(float) scale;
 
 @end
 
